<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp" >

        <Button
            android:id="@+id/btn_tgl_penjualan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_btn_rounded"
            android:padding="10dp"
            android:text="@string/txt_tgl_sales"
            android:textColor="@color/bg_white" />
        
        <EditText
            android:id="@+id/ed_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:visibility="gone"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <EditText
            android:id="@+id/ed_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_harga_produk"
            android:imeOptions="actionNext"
            android:inputType="number" />
        
        <EditText
            android:id="@+id/ed_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_remarks"
            
            android:imeOptions="actionDone"
            android:inputType="text" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_btn_rounded"
            android:padding="10dp"
            android:text="@string/txt_next"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>