<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >
        
        <Button
            android:id="@+id/btn_tgl_penjualan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/selector_btn_rounded"
            android:padding="10dp"
            android:text="@string/txt_tgl_sales"
            android:textColor="@color/bg_white" />
        
        <EditText
            android:id="@+id/ed_tgl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            
            android:textColor="@color/bg_black"
            android:visibility="gone"
            android:imeOptions="actionDone"
            android:inputType="number" />

        <EditText
            android:id="@+id/ed_harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_harga_produk"
            android:imeOptions="actionNext"
            android:textColor="@color/bg_black"
            android:inputType="number" />
        
        <EditText
            android:id="@+id/ed_remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_remarks"
            android:textColor="@color/bg_black"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <EditText
            android:id="@+id/ed_imei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_imei"
            android:padding="10dp"
            android:imeOptions="actionDone"
            android:textColor="@color/bg_black" />
        
         

        <Button
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:background="@drawable/selector_btn_rounded"
            android:padding="10dp"
            android:text="@string/txt_input_image"
            android:textColor="@color/bg_white" />
    </LinearLayout>
    
     <TextView 
         android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:layout_below="@id/wrapper"
            android:layout_centerHorizontal="true"
            android:text="@string/max_2"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:id="@+id/wrapper_horizontalview"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp" >

            <ImageView
                android:id="@+id/img_00"
                android:layout_width="100dp"
                android:layout_height="170dp"
                
                android:padding="5dp"
                android:visibility="invisible" />
            
            <ImageView
                android:id="@+id/img_01"
                android:layout_width="100dp"
                android:layout_height="170dp"
                
                android:padding="5dp"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/img_02"
                android:layout_width="100dp"
                android:layout_height="170dp"
                
                android:padding="5dp"
                android:visibility="invisible"/>

            <ImageView
                android:id="@+id/img_03"
                android:layout_width="100dp"
                android:layout_height="170dp"
                
                android:padding="5dp"
                android:visibility="invisible" />

            
        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>